--- a/grc338/website-content-hierarchy/contact.html
+++ b/grc338/website-content-hierarchy/contact.html
@@ -20,7 +20,7 @@
          </nav>
       </header>
       <h2>Contact Us!</h2>
-      <h3><img src="placeholder.jpg" alt="placeholder"></h3>
+      <p><img src="placeholder.jpg" alt="placeholder"></p>
       <ul>
          <li>
             <p>123 Happy Ave, San Luis Obispo, California</p>
@@ -28,9 +28,7 @@
          <li>
             <p>805-756-1108</p>
          </li>
-         <li>
-            <p>Hours</p>
-         </li>
+            <h3>Hours</h3>
          <li>
             <p>Tuesday–Friday: 0:00–0:00</p>
          </li>
