--- a/grc338/website-content-hierarchy/contact.html
+++ b/grc338/website-content-hierarchy/contact.html
@@ -10,38 +10,31 @@
       <title>Contact Us</title>
    </head>
    <body>
-      <header>
-         <h1><a href="index.html"><img src="logo.svg" alt="logo."></a></h1>
-         <nav>
-            <ul>
-               <li><a href="about.html">About</a></li>
-               <li><a href="menu.html">Menu</a></li>
-               <li><a href="contact.html">Contact</a></li>
-            </ul>
-         </nav>
-      </header>
-      <h2>Contact Us!</h2>
-      <p><img src="placeholder.jpg" alt="placeholder"></p>
-      <ul>
-         <li>
-            <p>123 Happy Ave, San Luis Obispo, California</p>
-         </li>
-         <li>
-            <p>805-756-1108</p>
-         </li>
+      <div class="container">
+         <header>
+            <h1><a href="index.html"><img src="logo.svg" alt="logo."></a></h1>
+            <nav>
+               <ul>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="menu.html">Menu</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+               </ul>
+            </nav>
+         </header>
+         <main>
+            <h2>Contact Us!</h2>
+            <p><img src="placeholder.jpg" alt="placeholder"></p>
+            <address>123 Happy Ave, San Luis Obispo, California</address>
+            <address>805-756-1108</address>
             <h3>Hours</h3>
-         <li>
             <p>Tuesday–Friday: 0:00–0:00</p>
-         </li>
-         <li>
             <p>Saturday–Sunday: 0:00–0:00</p>
-         </li>
-         <li>
             <p>Closed on Mondays</p>
-         </li>
-      </ul>
-      <footer>
-         <p>© All rights reserved. The Restaurant, 2024.</p>
-      </footer>
+         </main>
+         <footer>
+            <p>© All rights reserved. The Restaurant, 2024.</p>
+         </footer>
+      </div>
    </body>
 </html>
+
