--- a/grc338/website-content-hierarchy/index.html
+++ b/grc338/website-content-hierarchy/index.html
@@ -10,27 +10,25 @@
       <title>Home</title>
    </head>
    <body>
-      <header>
-         <h1><a href="index.html"><img src="logo.svg" alt="logo."></a></h1>
-         <nav>
-            <ul>
-               <li><a href="about.html">About</a></li>
-               <li><a href="menu.html">Menu</a></li>
-               <li><a href="contact.html">Contact</a></li>
-            </ul>
-         </nav>
-      </header>
-      <p>Every business has a nice slogan. Ours is coming soon.</p>
-      <ul>
-         <li>
-            <p>123 Happy Ave, San Luis Obispo, California</p>
-         </li>
-         <li>
-            <p>805-756-1108</p>
-         </li>
-      </ul>
-      <footer>
-         <p>© All rights reserved. The Restaurant, 2024.</p>
-      </footer>
+      <div class="home-container">
+         <header>
+            <h1><a href="index.html"><img src="logo.svg" alt="logo."></a></h1>
+            <nav>
+               <ul>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="menu.html">Menu</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+               </ul>
+            </nav>
+         </header>
+         <main>
+            <p>Every business has a nice slogan. Ours is coming soon.</p>
+            <address>123 Happy Ave, San Luis Obispo, California</address>
+            <address>805-756-1108</address>
+         </main>
+         <footer>
+            <p>© All rights reserved. The Restaurant, 2024.</p>
+         </footer>
+      </div>
    </body>
 </html>
