--- a/grc338/website-content-hierarchy/menu.html
+++ b/grc338/website-content-hierarchy/menu.html
@@ -10,6 +10,7 @@
       <title>Menu</title>
    </head>
    <body>
+      <div class="container">
       <header>
          <h1><a href="index.html"><img src="logo.svg" alt="logo."></a></h1>
          <nav>
@@ -20,6 +21,7 @@
             </ul>
          </nav>
       </header>
+      <main class="menu">
       <h2>Menu</h2>
       <h3>Category</h3>
       <p><img src="placeholder.jpg" alt="placeholder"></p>
@@ -157,8 +159,10 @@
             <p>$0.00</p>
          </li>
       </ul>
+   </main>
       <footer>
          <p>© All rights reserved. The Restaurant, 2024.</p>
       </footer>
+   </div>
    </body>
 </html>
